I can use webfont on webgl.
The key to load web-font.
1. use web-font loader.
2. use just to request just text you want to use.

If you request all text for the font, you would have wrong font at first
time. It web-font loader notify you active when the loader get first chunk of font file. If the glyph you want to use is not in first chunk of font, the first glyph display will be unexpected result.

--- a/entry.css
+++ b/entry.css
@@ -2,6 +2,7 @@
   width: 480px;
   height: 480px;
   margin: auto;
+  display: block;
 }
 
 
@@ -56,7 +57,7 @@
 
 @media (orientation: landscape) 
     and (min-width: 479px) 
-    and (max-widht: 639px)
+    and (max-width: 639px)
     and (min-height: 479px)
     and (max-height: 639px) {
 #game_grid {
@@ -91,9 +92,9 @@ body {
 }
 
 #font_test {
-    border: solid; 
-    font-family: "M PLUS Rounded 1c, sans-serif"; 
-    font-size: 12px;
+/*    border: solid;  */
+/*    font-family: "M PLUS Rounded 1c, sans-serif";  */
+/*    font-size: 12px; */
     display: none;
 }
 /*
@@ -105,23 +106,18 @@ body {
     font-family: "M PLUS Rounded 1c"; 
 }
 
-.splash {
-    display: block;
-}
-
-.wf-active .splash {
-    display: none;
-}
-
-.play-ground {
-    display: none;
-}
-
-.wf-active .play-ground {
-    display: block;
-}
-
 .resource {
     display: none; 
+}
+
+.overlay {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.9); 
+    overflow: hidden;
 }
 
