--- a/entry.css
+++ b/entry.css
@@ -92,18 +92,7 @@ body {
 }
 
 #font_test {
-/*    border: solid;  */
-/*    font-family: "M PLUS Rounded 1c, sans-serif";  */
-/*    font-size: 12px; */
     display: none;
-}
-/*
-.wf-droidsans {
-    font-family: "Droid Sans";
-}
-*/
-.wf-mplusrounded1c {
-    font-family: "M PLUS Rounded 1c"; 
 }
 
 .resource {
@@ -119,5 +108,6 @@ body {
     left: 0;
     background-color: rgba(0, 0, 0, 0.9); 
     overflow: hidden;
+    transition: 0.5s;
 }
 
