--- a/entry.css
+++ b/entry.css
@@ -88,7 +88,7 @@
 
 
 body {
-    background-color: white;
+    background-color: black;
 }
 
 #font_test {
@@ -111,3 +111,6 @@ body {
     transition: 0.5s;
 }
 
+.splash_text {
+    color: #ffffff;
+}
