--- a/entry.css
+++ b/entry.css
@@ -1,128 +1,93 @@
+@media (orientation: portrait) and (max-width: 479px) and (min-height: 479px) {
+  #game_grid {
+    width: 100%;
+    height: 480px;
+  }
+}
+@media (orientation: landscape) and (min-width: 479px) and (min-height: 319px) and (max-height: 359px) {
+  #game_grid {
+    width: 480px;
+    height: 300px;
+  }
+}
+@media (orientation: landscape) and (min-width: 479px) and (min-height: 359px) and (max-height: 379px) {
+  #game_grid {
+    width: 480px;
+    height: 360px;
+  }
+}
+@media (orientation: landscape) and (min-width: 479px) and (min-height: 379px) and (max-height: 419px) {
+  #game_grid {
+    width: 480px;
+    height: 380px;
+  }
+}
+@media (orientation: landscape) and (min-width: 479px) and (min-height: 419px) and (max-height: 479px) {
+  #game_grid {
+    width: 480px;
+    height: 400px;
+  }
+}
+@media (orientation: landscape) and (min-width: 479px) and (max-width: 639px) and (min-height: 479px) and (max-height: 639px) {
+  #game_grid {
+    width: 480px;
+    height: 480px;
+  }
+}
+@media (min-width: 639px) and (min-height: 639px) {
+  #game_grid {
+    width: 640px;
+    height: 640px;
+  }
+}
+@media (min-width: 479px) and (max-width: 639px) and (min-height: 479px) and (max-height: 639px) {
+  #game_grid {
+    width: 480px;
+    height: 480px;
+  }
+}
 #game_grid {
   width: 480px;
   height: 480px;
   margin: auto;
   display: block;
 }
-
-
-@media (orientation: portrait)
-    and (max-width: 479px) 
-    and (min-height: 479px) {
-#game_grid {
-  width: 100%;
-  height: 480px;
+.icon-item {
+  width: calc(100% / 9);
 }
-}
-
-@media (orientation: landscape) 
-    and (min-width: 479px) 
-    and (min-height: 319px)
-    and (max-height: 359px) {
-#game_grid {
-  width: 480px;
-  height: 300px;
-}
-}
-
-@media (orientation: landscape) 
-    and (min-width: 479px) 
-    and (min-height: 359px)
-    and (max-height: 379px) {
-#game_grid {
-  width: 480px;
-  height: 360px;
-}
-}
-
-@media (orientation: landscape) 
-    and (min-width: 479px) 
-    and (min-height: 379px)
-    and (max-height: 419px) {
-#game_grid {
-  width: 480px;
-  height: 380px;
-}
-}
-
-@media (orientation: landscape) 
-    and (min-width: 479px) 
-    and (min-height: 419px)
-    and (max-height: 479px) {
-#game_grid {
-  width: 480px;
-  height: 400px;
-}
-}
-
-@media (orientation: landscape) 
-    and (min-width: 479px) 
-    and (max-width: 639px)
-    and (min-height: 479px)
-    and (max-height: 639px) {
-#game_grid {
-  width: 480px;
-  height: 480px;
-}
-}
-
-@media  
-    (min-width: 639px) 
-    and (min-height: 639px) {
-#game_grid {
-  width: 640px;
-  height: 640px;
-}
-}
-
-
-@media (min-width: 479px)
-    and (max-width: 639px)
-    and (min-height: 479px)
-    and (max-height: 639px) {
-#game_grid {
-  width: 480px;
-  height: 480px;
-}
-}
-
-
 body {
-    background-color: black;
+  background-color: black;
 }
-
 #font_test {
-    display: none;
+  display: none;
 }
-
 .resource {
-    display: none; 
+  display: none;
 }
-
 .overlay {
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.9); 
-    overflow: hidden;
-    transition: 0.5s;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  overflow: hidden;
+  transition: 0.5s;
 }
-
-
 .splash_text {
-    color: #ffffff;
+  color: #ffffff;
 }
-
 .loading {
-	position: absolute;
-	bottom: 0px;
-	right: 0px;
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
 }
-
-
 .setting.menu {
-    color: #ffffff;
+  color: #ffffff;
+}
+.icons {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
