I am working in progress to develop icon selector.
I had a simple icon selector pane with flex grid.

--- a/entry.less
+++ b/entry.less
@@ -9,7 +9,7 @@
 }
 
 .icon-item {
-  width: calc(100% / 9);
+  width: calc(100% / 6);
 }
 
 
@@ -58,4 +58,41 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
 }
+
+ul.list.icons {
+    list-style-type: none;    
+    margin: 0;
+    padding: 0;
+}
+
+li.icon-item div {
+    display: flex;
+    justify-content: center;
+    border-radius: .25em;
+    padding: 4px;
+    border: solid #ffffff;
+}
+
+li.icon-item div:hover {
+    border:solid #0f0f0f;
+}
+
+
+
+li.icon-item div i {
+    font-size: 36px;
+}
+li.icon-itme div div {
+    height: 36px;
+}
+
+li.icon-item svg.svg-inline--fa {
+     font-size: 36px;
+}
+    
+
+li.icon-item svg.svg-inline--fa path {
+    fill: blue;
+}
+
 
