--- a/entry.less
+++ b/entry.less
@@ -77,6 +77,15 @@ li.icon-item div:hover {
     border:solid #0f0f0f;
 }
 
+.pagination.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;  
+    padding-top: 12px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+}
 
 
 li.icon-item div i {
