I am working in progress about 80% to have icon selector user interface.

--- a/entry.less
+++ b/entry.less
@@ -98,7 +98,10 @@ li.icon-itme div div {
 li.icon-item svg.svg-inline--fa {
      font-size: 36px;
 }
-    
+
+.btn.page-number {
+    width: 2.5em;
+}    
 
 li.icon-item svg.svg-inline--fa path {
     fill: blue;
