I created the icon selector modal user interface.

--- a/entry.css
+++ b/entry.css
@@ -104,7 +104,11 @@ li.icon-item div {
   border: solid #ffffff;
 }
 li.icon-item div:hover {
-  border: solid #0f0f0f;
+  border: solid var(--secondary);
+}
+li.icon-item.selected div:hover,
+li.icon-item.selected div {
+  border: solid var(--primary);
 }
 .pagination.container {
   display: flex;
@@ -118,8 +122,10 @@ li.icon-item div:hover {
 li.icon-item div i {
   font-size: 36px;
 }
-li.icon-itme div div {
+li.icon-item div div {
   height: 36px;
+  padding: initial;
+  border: initial;
 }
 li.icon-item svg.svg-inline--fa {
   font-size: 36px;
@@ -128,5 +134,5 @@ li.icon-item svg.svg-inline--fa {
   width: 2.5em;
 }
 li.icon-item svg.svg-inline--fa path {
-  fill: blue;
+  fill: #1B1B1B;
 }
