I maked setting icon in ceter in menu item container.

--- a/entry.less
+++ b/entry.less
@@ -52,7 +52,19 @@ body {
 .setting.menu {
     color: @text-color;
 }
+.setting .menu.item {
+    width: 1.5em;
+    height: 1.5em;
+    display: flex;
+    justify-content: center;
+}
+.setting .menu.item>i {
+    margin: auto;
+}
 
+.setting .menu.item>svg {
+    margin: auto;
+}
 .icons {
     display: flex;
     flex-direction: row;
