--- a/entry.css
+++ b/entry.css
@@ -86,6 +86,18 @@ body {
 .setting.menu {
   color: #ffffff;
 }
+.setting .menu.item {
+  width: 1.5em;
+  height: 1.5em;
+  display: flex;
+  justify-content: center;
+}
+.setting .menu.item > i {
+  margin: auto;
+}
+.setting .menu.item > svg {
+  margin: auto;
+}
 .icons {
   display: flex;
   flex-direction: row;
