removed some gradle tasks which are unecessary.

--- a/entry.less
+++ b/entry.less
@@ -15,7 +15,7 @@ body {
   background-color: black;
 }
 
-#font_test {
+#glyph_workarea {
     display: none;
 }
 
@@ -41,9 +41,9 @@ body {
 }
 
 .loading {
-	position: absolute;
-	bottom: 0px;
-	right: 0px;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
 }
 
 
