--- a/entry.less
+++ b/entry.less
@@ -69,6 +69,12 @@ body {
     flex-wrap: wrap;
 }
 
+.icon.kind {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em; 
+}
+
+
 ul.list.icons {
     list-style-type: none;    
     margin: 0;
