I keep a current state of html-webpack-plugin's template for fixing not to generage html with webpack-cdn-plugin.

--- a/src/mswp.ejs
+++ b/src/mswp.ejs
@@ -3,12 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Mine sweeper</title>
+  <title><%= htmlWebpackPlugin.options.title %></title>
   <meta property="og:title" content="Mine sweeper" />
   <meta property="og:image" content="<?php echo $mswp_settings['siteUrl']; ?>/img/game-image.png" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="<?php echo $mswp_settings['siteUrl']; ?>/entry.php" />
   <meta name="viewport" content="width=device-width initial-scale=1">
+<!--
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js">
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js">
@@ -22,10 +23,11 @@
   <link rel="stylesheet" type="text/css" href="entry.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+-->
   <script>
     var mswpSettings = <?php echo json_encode($mswp_settings); ?> ;
   </script>
-  <script data-main="entry" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.js">
+  <script src="prg/mswp.js">
   </script>
 
 </head>
