I work on progress to show dropdown menu.

--- a/src/jsMain/less/entry.less
+++ b/src/jsMain/less/entry.less
@@ -63,6 +63,11 @@ body {
 .setting .menu.item>svg {
     margin: auto;
 }
+
+.setting.menu.contents {
+    display: none;
+}
+
 .icons {
     display: flex;
     flex-direction: row;
