--- a/src/mswp.ejs
+++ b/src/mswp.ejs
@@ -31,12 +31,15 @@
           <td><i class="fas fa-wrench"></i></td>
           <td><?php echo _("Labels ..."); ?></td>
         </tr>
-        <tr>
+        <tr id="lighting-setting">
           <td><i class="fas fa-sun"></i></td>
           <td><?php echo _("Lighting"); ?></td>
         </tr>
       </tbody>
     </table>
+  </div>
+  <div id="back-to-main">
+    <i class="fas fa-arrow-left fa-2x"></i>
   </div>
   <div id="game_over_modal" class="modal" tabindx="-1" role="dialog">
     <div class="modal-dialog" role="document">
@@ -110,6 +113,7 @@
       </div>
     </div>
   </div>
+
   <template id="synchronizing_icon">
     <i class="fa fa-sync-alt fa-spin"></i>
   </template>
