I had a menu item to edit point light location.

--- a/src/mswp.ejs
+++ b/src/mswp.ejs
@@ -114,8 +114,11 @@
     </div>
   </div>
 
-  <template id="synchronizing_icon">
+  <template id="synchronizing-icon">
     <i class="fa fa-sync-alt fa-spin"></i>
+  </template>
+  <template id="synchronizing-icon-2">
+    <i class="fa fa-sync-alt fa-spin fa-2x"></i>
   </template>
   <template id="icon_item_tmpl">
     <li class="icon-item"><div><i></i></div></li>
