I work in progress to have procedure select color for game.

--- a/src/jsMain/less/entry.less
+++ b/src/jsMain/less/entry.less
@@ -151,6 +151,41 @@ li.icon-item svg.svg-inline--fa path {
 }
 
 
+
+#color-selector {
+    div.colors.container {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        div.color-scheme {
+            border-radius: .2em;
+            margin: .2em;
+            width: 1em;
+            height: 1em;
+        }
+    }
+    div.color-circle-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    div.color-value-controller {
+        width: 100%;
+        display: flex; 
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
+    }
+    canvas.oc-color-circle {
+        width: 160px;
+        height: 160px;
+    }
+}
+
+
 @import "responsive";
 
 // vi: se ts=4 sw=4 et:
