--- a/src/mswp.ejs
+++ b/src/mswp.ejs
@@ -31,6 +31,10 @@
           <td><i class="fas fa-wrench"></i></td>
           <td><?php echo _("Labels ..."); ?></td>
         </tr>
+        <tr id="color-setting">
+          <td><i class="fas fa-paint-roller"></i></td>
+          <td><?php echo _("Colors ..."); ?></td>
+        </tr>
         <tr id="lighting-setting">
           <td><i class="fas fa-sun"></i></td>
           <td><?php echo _("Lighting"); ?></td>
@@ -102,6 +106,36 @@
           <ul class="icons list">
           </ul>
           <div class="pagination container"></div>
+        </div>
+        <div class="modal-footer">
+          <button type="button"
+            class="btn btn-primary ok"><?php echo _("OK"); ?></button>
+          <button type="button"
+            data-dismiss="modal" 
+            class="btn btn-secondary"><?php echo _("Cacel"); ?></button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="color-selector" class="modal" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-title"><?php
+          echo _("Please choose color"); ?></div>
+        <div class="modal-body">
+          <div class="colors container">
+            <div class="color-scheme color-item-0"></div>
+            <div class="color-scheme color-item-1"></div>
+            <div class="color-scheme color-item-3"></div>
+            <div class="color-scheme color-item-4"></div>
+            <div class="color-scheme color-item-env-0"></div>
+          </div>
+          <div class="color-circle-container">
+            <canvas class="oc-color-circle"></canvas>
+          </div>
+          <div class="color-value-controller">
+            <input class="oc-value" type="number" min="0" max="255">
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button"
