I had a tooltip for color selector box.

--- a/src/jsMain/less/entry.less
+++ b/src/jsMain/less/entry.less
@@ -197,6 +197,20 @@ li.icon-item svg.svg-inline--fa path {
 }
 
 
+
+div.tooltip {
+    display: none;
+}
+div.tooltip.visible {
+    display: block;
+    opacity: 1;
+}
+
+
+
+
+
+
 @import "responsive";
 
 // vi: se ts=4 sw=4 et:
