--- a/src/mswp.ejs
+++ b/src/mswp.ejs
@@ -126,12 +126,34 @@
         </div>
         <div class="modal-body">
           <div class="colors container">
-            <div class="color-scheme color-item-0"></div>
-            <div class="color-scheme color-item-1"></div>
-            <div class="color-scheme color-item-3"></div>
-            <div class="color-scheme color-item-4"></div>
-            <div class="color-scheme color-item-env-0"></div>
-            <div class="color-scheme color-item-env-1"></div>
+            <div class="color-scheme color-item-0"
+              data-toggle="tooltip"
+              title=""></div>
+            <div class="color-scheme color-item-1"
+              data-toggle="tooltip"
+              title="<?php
+                echo _("button front face");
+              ?>"></div>
+            <div class="color-scheme color-item-3"
+              data-toggle="tooltip"
+              title="<?php
+                echo _("button back face");
+              ?>"></div>
+            <div class="color-scheme color-item-4"
+              data-toggle="tooltip"
+              title="<?php
+                echo _("board");
+              ?>"></div>
+            <div class="color-scheme color-item-env-0"
+              data-toggle="tooltip"
+              title="<?php
+                echo _("backgournd");
+              ?>"></div>
+            <div class="color-scheme color-item-env-1"
+              data-toggle="tooltip"
+              title="<?php
+                echo _("text");
+              ?>"></div>
           </div>
           <div class="color-circle-container">
             <canvas class="oc-color-circle"></canvas>
@@ -149,7 +171,26 @@
         </div>
       </div>
     </div>
+    <div class="tooltip color-item-0"><?php
+      echo _("label");
+    ?></div>
+    <div class="tooltip color-item-1"><?php
+      echo _("button front face");
+    ?></div>
+    <div class="tooltip color-item-3"><?php
+      echo _("button back face");
+    ?></div>
+    <div class="tooltip color-item-4"><?php
+      echo _("board");
+    ?></div>
+    <div class="tooltip color-item-env-0"><?php
+      echo _("background");
+    ?></div>
+    <div class="tooltip color-item-env-1"><?php
+      echo _("text");
+    ?></div>
   </div>
+
 
   <template id="synchronizing-icon">
     <i class="fa fa-sync-alt fa-spin"></i>
