I had selected color description on color selector dialog.

--- a/src/jsMain/less/entry.less
+++ b/src/jsMain/less/entry.less
@@ -153,6 +153,9 @@ li.icon-item svg.svg-inline--fa path {
 
 
 #color-selector {
+    div.description {
+        text-align: center;
+    }
     div.colors.container {
         width: 100%;
         display: flex;
@@ -195,19 +198,6 @@ li.icon-item svg.svg-inline--fa path {
         height: 160px;
     }
 }
-
-
-
-div.tooltip {
-    display: none;
-}
-div.tooltip.visible {
-    display: block;
-    opacity: 1;
-}
-
-
-
 
 
 
