--- a/src/mswp.ejs
+++ b/src/mswp.ejs
@@ -125,35 +125,20 @@
             echo _("Please choose color"); ?></div>
         </div>
         <div class="modal-body">
+          <div class="description"></div>
           <div class="colors container">
             <div class="color-scheme color-item-0"
-              data-toggle="tooltip"
-              title=""></div>
+              data-tooltip="<?php echo _("Label"); ?>" ></div>
             <div class="color-scheme color-item-1"
-              data-toggle="tooltip"
-              title="<?php
-                echo _("button front face");
-              ?>"></div>
+              data-tooltip="<?php echo _("Button front face"); ?>"></div>
             <div class="color-scheme color-item-3"
-              data-toggle="tooltip"
-              title="<?php
-                echo _("button back face");
-              ?>"></div>
+              data-tooltip="<?php echo _("Button back face"); ?>"></div>
             <div class="color-scheme color-item-4"
-              data-toggle="tooltip"
-              title="<?php
-                echo _("board");
-              ?>"></div>
+              data-toolitp="<?php echo _("Board"); ?>"></div>
             <div class="color-scheme color-item-env-0"
-              data-toggle="tooltip"
-              title="<?php
-                echo _("backgournd");
-              ?>"></div>
+              data-tooltip="<?php echo _("Backgournd"); ?>"></div>
             <div class="color-scheme color-item-env-1"
-              data-toggle="tooltip"
-              title="<?php
-                echo _("text");
-              ?>"></div>
+              data-tooltip="<?php echo _("Text"); ?>"></div>
           </div>
           <div class="color-circle-container">
             <canvas class="oc-color-circle"></canvas>
@@ -171,24 +156,6 @@
         </div>
       </div>
     </div>
-    <div class="tooltip color-item-0"><?php
-      echo _("label");
-    ?></div>
-    <div class="tooltip color-item-1"><?php
-      echo _("button front face");
-    ?></div>
-    <div class="tooltip color-item-3"><?php
-      echo _("button back face");
-    ?></div>
-    <div class="tooltip color-item-4"><?php
-      echo _("board");
-    ?></div>
-    <div class="tooltip color-item-env-0"><?php
-      echo _("background");
-    ?></div>
-    <div class="tooltip color-item-env-1"><?php
-      echo _("text");
-    ?></div>
   </div>
 
 
