You can select colors for the game.

--- a/src/jsMain/less/entry.less
+++ b/src/jsMain/less/entry.less
@@ -197,6 +197,15 @@ li.icon-item svg.svg-inline--fa path {
         width: 160px;
         height: 160px;
     }
+    .modal-footer {
+        display: block;
+        .left-side {
+            float: left;
+        }
+        .right-side {
+            float: right;
+        }
+    }
 }
 
 
