I work in progress to have flag to prevent from touching mine accidentally.

--- a/src/mswp.ejs
+++ b/src/mswp.ejs
@@ -97,6 +97,7 @@
             <select class="custom-select" id="icon-kind-selector">
               <option value="ok" selected><?php echo _("OK"); ?></option>
               <option value="ng"><?php echo _("NG"); ?></option>
+              <option value="flag"><?php echo _("Flag"); ?></option>
             </select>
             <div class="input-group-append" >
               <label class="input-group-text"
