--- a/src/mswp.ejs
+++ b/src/mswp.ejs
@@ -21,7 +21,10 @@
     <span><?php echo _("Loading...");?><div class="spinner-grow text-white" role="status"><span class="sr-only"></span></div></span>
     </div>
   </div>
-  <div class="setting menu"><div class="menu item"><i class="fas fa-users-cog"></i></div></div>
+  <div class="menu-bar">
+    <div class="setting menu"><div class="menu item"><i class="fas fa-users-cog"></i></div></div>
+    <div class="flags"><i class="fas fa-flag"></i></div>
+  </div>
   <canvas id="game_grid" class=play-ground></canvas>
   <canvas id="glyph_workarea" width="256" height="256"></canvas>
   <div class="setting menu contents">
